Fixed layout issues

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -376,7 +376,7 @@ div#base-content {
       margin: 3vh auto;
     }
     div.findme {
-      width: 350px;
+      width: 300px;
       ul {
         li {
           border-top: 1px solid $selected;
